Avoid overflow for Device16x9Landscape quiz pages (BL-9952/BL-9823)

--- a/src/BloomBrowserUI/templates/template books/Activity/simpleComprehensionQuiz.less
+++ b/src/BloomBrowserUI/templates/template books/Activity/simpleComprehensionQuiz.less
@@ -13,6 +13,13 @@
     --pure-material-onprimary-rgb: 255, 255, 255;
     --pure-material-onsurface-rgb: 0, 0, 0;
 
+    &.Device16x9Landscape {
+        // Shrink margins between answers to fit everything within actual page size for
+        // Device16x9Landscape page size and orientation.
+        .bloom-translationGroup {
+            margin-bottom: @vertical-space - 1px;
+        }
+    }
     .bloom-translationGroup {
         margin-bottom: @vertical-space;
         flex-grow: 1;
@@ -36,7 +43,6 @@
         // starts a new stacking context, so the z-index:-1 shadows behind the check boxes
         // are not hidden by the non-transparent bloom-page.
         z-index: 0;
-        height: 2.85em; // prevent overflow on quiz page in device layout (BL-9823)
 
         input {
             // This input is sized to fill the space of the circle we draw around the
